@startuml use case
 class User{
    idUser 
    nom 
    prenom 
    password
    email
    role
 }
  class Client{
    idClient 
    nom 
    prenom 
    telephone
    email
    limitCredit
   
 }
 class Fournisseur{
    idFournisseur
    nomEntreprise 
    telephone
    adresseDepot
    email 
   
 }
 
 class Approvissionnement{
    idApprovissionnement
    refBl 
    valeurLot

 }
  class ligneAppro{
    idApprovissionnement
    qteAppro
    qteRecu
    prixAchat
    sousTotal

 }

 class Vente{
    idVente
    montantTotal
    montantVerser
 }

 class ligneVente{
    idLigneVente
    qtevendue
    prixvente
    sousTotal
 }
 class Dette{
    idDette
    dateCreation
    montantInitial 
    montantVerser
 }
  class Produit{
    idProduit
    libelle
    qteStock
    prix
    
 }
  class Paiement{
    idPaiement
    montantPayer
    
 }
   class ModedePaiement{
    idModedePaiement
    libelle
    
 }
 class Role{
     id_role
     etat 
 }
     



User "1"--"0..*"Client
User "1"--"0..*"Fournisseur
User "1"--"0..*"Produit
User "0..*"--"1"Role


ligneVente "0..*"--"1"Produit
Vente "1"--"0..*"ligneVente
Paiement "0..*"--"1"ModedePaiement
Fournisseur "1"--"0..*"Approvissionnement
Approvissionnement "1"--"0..*"ligneAppro
ligneAppro "0..*"--"1"Produit


Vente "1"--"0..1"Dette
Client "1"--"0..*"Vente
Vente "1"--"0.."Paiement


@enduml